468 Adding ability to call user by Spark email

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       </form>
 
       <div id="display_name"></div>
+      <video id="outgoing_call" muted autoplay></video>
+      <video id="incoming_call" autoplay></video>
 
       <script src="js/bundle.js"></script>
     </body>
