485 Added manual hangup capability

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <div id="display_name"></div>
       <video id="outgoing_call" muted autoplay></video>
       <video id="incoming_call" autoplay></video>
+      <button id="hangup_call">Hangup</button>
 
       <script src="js/bundle.js"></script>
     </body>
