460 Fixed a bug that prevented login
(we weren't looking at the right file)

--- a/src/login.html
+++ b/src/login.html
@@ -9,6 +9,6 @@
     <body>
       <button id="login_button">Login</button>
 
-      <script src="./loginBundle.js"></script>
+      <script src="js/loginBundle.js"></script>
     </body>
 </html>
