460 Made calling work with authorization

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
       <h1>Spark User Email</h1>
       <form>
         <input type="text" id="user_email" />
-        <input type="submit" id="submit_user_email" value="Find" />
+        <input type="submit" id="submit_user_email" value="Call" disabled />
       </form>
 
-      <div id="display_name"></div>
+      <div id="spark_message"></div>
       <video id="outgoing_call" muted autoplay></video>
       <video id="incoming_call" autoplay></video>
       <button id="hangup_call">Hangup</button>
