--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Spark JavaScript SDK Example</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
       <button id="login_button">Login</button>
