460 Standardized naming convention for generated bundles & javascript files
(loginController.js -> login.js)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <video id="incoming_call" autoplay></video>
       <button id="hangup_call">Hangup</button>
 
-      <script src="js/bundle.js"></script>
+      <script src="js/indexBundle.js"></script>
     </body>
 </html>
