--- a/login.html
+++ b/login.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Spark JavaScript SDK Example</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-      <button id="login_button">Login</button>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Spark JavaScript SDK Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <main class="login-page">
+      <section>
+        <span class="branding large">Kitchen Sink</span>
+        <button class="primary-button large" id="login_button">Spark Log In</button>
+      </section>
+    </main>
 
-      <script src="js/loginBundle.js"></script>
-    </body>
+    <script src="js/loginBundle.js"></script>
+  </body>
 </html>
