468 Converting HTML ids to hyphens instead of underscores for consistency

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <section>
         <h1>Initiate call with user</h1>
         <form class="container">
-          <input type="text" id="user_email" placeholder="Email" />
-          <button class="primary-button" id="submit_user_email" disabled>
+          <input type="text" id="user-email" placeholder="Email" />
+          <button class="primary-button" id="submit-user-email" disabled>
             <i class="fa fa-video-camera" aria-hidden="true"></i>
           </button>
         </form>
@@ -32,14 +32,14 @@
     </main>
 
     <template id="call-template">
-      <div id="spark_message"></div>
+      <div id="spark-message"></div>
       <div class="video-container">
-        <video id="incoming_call" autoplay></video>
-        <video id="outgoing_call" muted autoplay></video>
+        <video id="incoming-call" autoplay></video>
+        <video id="outgoing-call" muted autoplay></video>
       </div>
       <div class="controls-container">
         <div class="incoming-controls">
-          <button id="hangup_call" class="cancel-button">
+          <button id="hangup-call" class="cancel-button">
             <i class="fa fa-phone" aria-hidden="true"></i> Hangup
           </button>
         </div>
