483 Finished standardizing CSS id names
they all have dashes, not underscores

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <main class="login-page">
       <section>
         <span class="branding large">Kitchen Sink</span>
-        <button class="primary-button large" id="login_button">Spark Log In</button>
+        <button class="primary-button large" id="login-button">Spark Log In</button>
       </section>
     </main>
 
