--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <main>
       <header>
         <span class="branding">Kitchen Sink</span>
+        <button class="logout" id="logout-button" disabled>
+          <i class="fa fa-large fa-sign-out"></i>
+          <span>Sign Out</span>
+        </button>
       </header>
 
       <section>
