485 refactored red button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="controls-container">
         <div class="incoming-controls">
-          <button id="hangup-call" class="cancel-button">
+          <button id="hangup-call" class="primary-button red">
             <i class="fa fa-phone" aria-hidden="true"></i> Hangup
           </button>
         </div>
