486 Refactored active call overlay to be more dynamic

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </button>
       </header>
 
-      <section>
+      <section id="main-content">
         <h1>Initiate call with user</h1>
         <form class="container">
           <input type="text" id="user-email" placeholder="Email" />
@@ -26,8 +26,6 @@
             <i class="fa fa-video-camera" aria-hidden="true"></i>
           </button>
         </form>
-
-        <section id="overlay"></section>
       </section>
 
       <footer>
@@ -36,20 +34,18 @@
     </main>
 
     <template id="call-template">
-      <div id="call-container">
-        <div id="spark-message"></div>
-        <div class="video-container">
-          <video id="incoming-call" autoplay></video>
-          <video id="outgoing-call" muted autoplay></video>
+      <div id="spark-message"></div>
+      <div class="video-container">
+        <video id="incoming-call" autoplay></video>
+        <video id="outgoing-call" muted autoplay></video>
+      </div>
+      <div class="controls-container">
+        <div class="incoming-controls">
+          <button id="hangup-call" class="primary-button red">
+            <i class="fa fa-phone" aria-hidden="true"></i> Hangup
+          </button>
         </div>
-        <div class="controls-container">
-          <div class="incoming-controls">
-            <button id="hangup-call" class="primary-button red">
-              <i class="fa fa-phone" aria-hidden="true"></i> Hangup
-            </button>
-          </div>
-          <div class="outgoing-controls"></div>
-        </div>
+        <div class="outgoing-controls"></div>
       </div>
     </template>
 
