--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@
     </main>
 
     <template id="call-template">
-      <div id="spark-message"></div>
-      <div class="video-container">
-        <video id="incoming-call" autoplay></video>
-        <video id="outgoing-call" muted autoplay></video>
-      </div>
-      <div class="controls-container">
-        <div class="incoming-controls">
-          <button id="hangup-call" class="primary-button red">
-            <i class="fa fa-phone" aria-hidden="true"></i> Hangup
-          </button>
+      <section id="active-call-overlay" class="overlay">
+        <div id="spark-message"></div>
+        <div class="video-container">
+          <video id="incoming-call" autoplay></video>
+          <video id="outgoing-call" muted autoplay></video>
         </div>
-        <div class="outgoing-controls"></div>
-      </div>
+        <div class="controls-container">
+          <div class="incoming-controls">
+            <button id="hangup-call" class="primary-button red">
+              <i class="fa fa-phone" aria-hidden="true"></i> Hangup
+            </button>
+          </div>
+          <div class="outgoing-controls"></div>
+        </div>
+      </section>
     </template>
 
     <script src="js/indexBundle.js"></script>
