469 Can now cancel an outgoing call

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
       </section>
     </template>
 
+    <template id="calling-template">
+      <section id="calling-overlay" class="overlay">
+        <image class="avatar-image" id="callee-image" src="images/Recipient.svg"/>
+        <span class="callee-name" id="callee-name"></span>
+        <button id="hangup-calling" class="primary-button red">
+          <i class="fa fa-phone" aria-hidden="true"></i> Hangup
+        </button>
+      </section>
+    </template>
+
     <script src="js/indexBundle.js"></script>
   </body>
 </html>
