486 Found a common abstraction for the other person's email when waiting for a call to start

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <template id="calling-template">
       <section id="calling-overlay" class="overlay">
         <image class="avatar-image" id="callee-image" src="images/Recipient.svg"/>
-        <span class="callee-name" id="callee-name"></span>
+        <span class="call-email" id="callee-email"></span>
         <button id="hangup-calling" class="primary-button red">
           <i class="fa fa-phone" aria-hidden="true"></i> Hangup
         </button>
@@ -65,7 +65,7 @@
       <section id="incoming-call-overlay" class="overlay">
         <h1>Incoming Call</h1>
         <img class="avatar-image" id="caller-image" src="images/Recipient.svg" />
-        <span class="caller-name" id="caller-name"></span>
+        <span class="call-email" id="caller-email"></span>
         <section class="incoming-call-controls">
           <button class="primary-button small" id="answer-video">
             <i class="fa fa-video-camera" aria-hidden="true"></i> Answer
