486 Renamed a class because the old name was inaccurate

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <span class="branding">Kitchen Sink</span>
         <button class="logout" id="logout-button" disabled>
-          <i class="fa large fa-sign-out"></i>
+          <i class="fa action fa-sign-out"></i>
           <span>Sign Out</span>
         </button>
       </header>
