518 Added handlers for incoming call rejection and failure

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <h1>Incoming Call</h1>
         <img class="avatar-image" id="caller-image" src="images/Recipient.svg" />
         <span class="call-email" id="caller-email"></span>
+        <span class="call-status" id="incoming-call-status"></span>
         <section class="incoming-call-controls">
           <button class="primary-button small" id="answer-video">
             <i class="fa fa-video-camera" aria-hidden="true"></i> Answer
