design review changes, removed incoming call h1 per mockup

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <span class="call-email" id="callee-email"></span>
         <span class="call-status" id="calling-status"></span>
-        <button id="hangup-calling" class="primary-button red">
+        <button id="hangup-calling" class="primary-button small red">
           <i class="fa fa-phone" aria-hidden="true"></i> Hangup
         </button>
       </section>
