467 Added outgoing audio-only call

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <h1>Initiate call with user</h1>
         <form class="container">
           <input type="text" id="user-email" placeholder="Email" />
-          <button class="primary-button" id="submit-user-email" disabled>
-            <i class="fa fa-video-camera" aria-hidden="true"></i>
+          <button class="primary-button" id="call-audio-only" disabled>
+            <i class="fa fa-microphone" aria-hidden="true"></i>
+          </button>
+          <button class="primary-button" id="call-video-audio" disabled>
+            <i class="fa fa-phone" aria-hidden="true"></i>
           </button>
         </form>
       </section>
