487 Accept incoming call with audio only

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
         <span class="call-email" id="caller-email"></span>
         <span class="call-status" id="incoming-call-status"></span>
         <section class="incoming-call-controls">
-          <button class="primary-button small" id="answer-video">
+          <button class="primary-button small" id="answer-audio-only">
+            <i class="fa fa-microphone" aria-hidden="true"></i> Answer
+          </button>
+          <button class="primary-button small" id="answer-video-audio">
             <i class="fa fa-video-camera" aria-hidden="true"></i> Answer
           </button>
           <button class="primary-button small red" id="reject">
