487 Refactor: Changed a few names to better match their purpose

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <template id="call-template">
       <section id="active-call-overlay" class="overlay">
         <div class="video-container">
-          <video id="incoming-call" autoplay></video>
-          <video id="outgoing-call" muted autoplay></video>
+          <video class="video" id="incoming-call" autoplay></video>
+          <video class="video" id="outgoing-call" muted autoplay></video>
         </div>
         <div class="controls-container">
           <div class="incoming-controls">
