--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <h1>Initiate call with user</h1>
         <form class="container">
           <input type="text" id="user-email" placeholder="Email" />
-          <button class="primary-button" id="call-audio-only" disabled>
-            <i class="fa fa-microphone" aria-hidden="true"></i>
-          </button>
           <button class="primary-button" id="call-video-audio" disabled>
             <i class="fa fa-phone" aria-hidden="true"></i>
+          </button>
+          <button class="primary-button" id="call-audio-only" disabled>
+            <i class="fa fa-microphone" aria-hidden="true"></i>
           </button>
         </form>
       </section>
@@ -75,11 +75,11 @@
         <span class="call-email" id="caller-email"></span>
         <span class="call-status" id="incoming-call-status"></span>
         <section class="incoming-call-controls">
-          <button class="primary-button small" id="answer-audio-only">
-            <i class="fa fa-microphone" aria-hidden="true"></i> Answer
-          </button>
           <button class="primary-button small" id="answer-video-audio">
-            <i class="fa fa-video-camera" aria-hidden="true"></i> Answer
+            <i class="fa fa-video-camera" aria-hidden="true"></i> Audio-Video
+          </button>
+          <button class="primary-button small" id="answer-audio-only">
+            <i class="fa fa-microphone" aria-hidden="true"></i> Audio
           </button>
           <button class="primary-button small red" id="reject">
             <i class="fa fa-phone" aria-hidden="true"></i> Reject
