--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
         <h1>Initiate call with user</h1>
         <form class="container">
           <input type="text" id="user-email" placeholder="Email" />
-          <button class="primary-button" id="call-video-audio" disabled>
-            <i class="fa fa-phone" aria-hidden="true"></i>
-          </button>
-          <button class="primary-button" id="call-audio-only" disabled>
-            <i class="fa fa-microphone" aria-hidden="true"></i>
-          </button>
+          <button class="primary-button video-button icon" id="call-video-audio" disabled></button>
+          <button class="primary-button audio-button icon" id="call-audio-only" disabled></button>
         </form>
       </section>
 
