--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h1>Initiate call with user</h1>
         <form class="container">
           <input type="text" id="user-email" placeholder="Email" />
-          <button class="primary-button video-button icon" id="call-video-audio" disabled></button>
-          <button class="primary-button audio-button icon" id="call-audio-only" disabled></button>
+          <button class="primary-button call-button video-button icon" id="call-video-audio" disabled></button>
+          <button class="primary-button call-button audio-button icon" id="call-audio-only" disabled></button>
         </form>
       </section>
 
@@ -71,15 +71,9 @@
         <span class="call-email" id="caller-email"></span>
         <span class="call-status" id="incoming-call-status"></span>
         <section class="incoming-call-controls">
-          <button class="primary-button small" id="answer-video-audio">
-            <i class="fa fa-video-camera" aria-hidden="true"></i> Audio-Video
-          </button>
-          <button class="primary-button small" id="answer-audio-only">
-            <i class="fa fa-microphone" aria-hidden="true"></i> Audio
-          </button>
-          <button class="primary-button small red" id="reject">
-            <i class="fa fa-phone" aria-hidden="true"></i> Reject
-          </button>
+          <button class="primary-button answer-button small answer-video-audio icon" id="answer-video-audio">Answer</button>
+          <button class="primary-button answer-button small answer-audio-only icon" id="answer-audio-only">Audio Only</button>
+          <button class="primary-button answer-button small reject-call icon red" id="reject">Reject</button>
         </section>
       </section>
     </template>
