529 User can now return to login page if device registration fails

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <header>
         <span class="branding">Kitchen Sink</span>
-        <button class="logout" id="logout-button" disabled>
+        <button class="logout" id="logout-button">
           <i class="fa action fa-sign-out"></i>
           <span>Sign Out</span>
         </button>
