482 Removed empty span in the footer
we were saving it for later

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         </form>
       </section>
 
-      <footer>
-        <span class="debug"></span>
-      </footer>
+      <footer></footer>
     </main>
 
     <template id="call-template">
