482 Submit text feedback after an active call ends

--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
       </section>
     </template>
 
+    <template id="user-feedback-template">
+      <section id="user-feedback-overlay" class="overlay">
+        <h1>Please rate your experience</h1>
+        <div class="comments">
+          <h1>Comments</h1>
+          <textarea id="feedback-comments" placeholder='Tell us how you `really` feel.'></textarea>
+        </div>
+        <div class="buttons">
+          <button id="submit-feedback" class="primary-button">Send Feedback</button>
+          <button id="cancel" class="cancel primary-button">Cancel</button>
+        </div>
+      </section>
+    </template>
+
     <script src="js/indexBundle.js"></script>
   </body>
 </html>
