482 Feedback is now hidden away inside a button that only shows up during and after a call.
This way, it's not as spammy.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         </form>
       </section>
 
-      <footer></footer>
+      <footer>
+        <span></span>
+        <button class="feedback-button icon hidden" id="feedback">Call Feedback</button>
+      </footer>
     </main>
 
     <template id="call-template">
@@ -82,7 +85,7 @@
         <h1>Please rate your experience</h1>
         <div class="comments">
           <h1>Comments</h1>
-          <textarea id="feedback-comments" placeholder='Tell us how you `really` feel.'></textarea>
+          <textarea id="feedback-comments" placeholder='Tell us how you really feel.'></textarea>
         </div>
         <div class="buttons">
           <button id="submit-feedback" class="primary-button">Send Feedback</button>
