473 Adding ability to toggle outgoing audio in a call

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <button class="primary-button phone-button icon small red" id="hangup-call">Hangup</button>
           </div>
           <div class="outgoing-controls">
-            <button class="primary-button video-button icon" id="toggle-outgoing-video"></butwton>
+            <button class="primary-button outgoing-toggle video-button icon" id="toggle-outgoing-video"></button>
+            <button class="primary-button outgoing-toggle audio-button icon" id="toggle-outgoing-audio"></button>
           </div>
         </div>
       </section>
