482 Feedback button is now hidden on the feedback screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <footer>
         <span></span>
-        <button class="feedback-button icon hidden" id="feedback">Call Feedback</button>
+        <button class="feedback-button icon hidden" id="feedback-button">Call Feedback</button>
       </footer>
     </main>
 
