474 Adds an audio toggle button. Toggling off works, but on is currently broken
we have an issue submitted

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="controls-container">
           <div class="incoming-controls">
             <button class="primary-button toggle video-button icon" id="toggle-incoming-video"></button>
+            <button class="primary-button toggle audio-button icon" id="toggle-incoming-audio"></button>
             <button class="primary-button phone-button icon small red" id="hangup-call">Hangup</button>
           </div>
           <div class="outgoing-controls">
