481 User feedback has option to include logs

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
           <h1>Comments</h1>
           <textarea id="feedback-comments" placeholder='Tell us how you really feel.'></textarea>
         </div>
+        <div class="include-logs">
+          <div>Include Logs:</div>
+          <input type="radio" name="include-logs" value="true">Yes</input>
+          <input type="radio" name="include-logs" value="false">No</input>
+        </div>
         <div class="buttons">
           <button id="submit-feedback" class="primary-button">Send Feedback</button>
           <button id="cancel" class="cancel primary-button">Cancel</button>
