514 Renaming template ids and corresponding JS files to be more consistent

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </footer>
     </main>
 
-    <template id="call-template">
+    <template id="active-call-template">
       <section id="active-call-overlay" class="overlay">
         <div class="video-container">
           <div class="incoming-video">
@@ -61,7 +61,7 @@
       </section>
     </template>
 
-    <template id="calling-template">
+    <template id="outgoing-call-template">
       <section id="calling-overlay" class="overlay">
         <div class="avatar-image">
           <img id="callee-image" src="images/Recipient.svg" />
@@ -90,7 +90,7 @@
       </section>
     </template>
 
-    <template id="user-feedback-template">
+    <template id="feedback-template">
       <section id="user-feedback-overlay" class="overlay">
         <h1>Please rate your experience</h1>
         <div class="comments">
