477 Updated comment placeholder

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h1>Please rate your experience</h1>
         <div class="comments">
           <h1>Comments</h1>
-          <textarea id="feedback-comments" placeholder='Tell us how you really feel.'></textarea>
+          <textarea id="feedback-comments" placeholder="How was the call quality?"></textarea>
         </div>
         <div class="include-logs">
           <div>Include Logs:</div>
