--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Spark JavaScript SDK Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <main class="login-page">
