made markup and design change to feedback input labels - CO

--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
         </div>
         <div class="include-logs">
           <div>Include Logs:</div>
-          <input type="radio" name="include-logs" value="true">Yes</input>
-          <input type="radio" name="include-logs" value="false">No</input>
+          <input id="include-logs-yes" type="radio" name="include-logs" value="true">
+          <label for="include-logs-yes">Yes</label>
+          <input id="include-logs-no" type="radio" name="include-logs" value="false">
+          <label for="include-logs-no">No</label>
         </div>
         <div class="buttons">
           <button class="primary-button" id="submit-feedback">Send Feedback</button>
