--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
         <h1>Initiate call with user</h1>
         <form class="container">
           <input type="text" id="user-email" placeholder="Email" />
-          <button class="primary-button call-button phone-button icon" id="call-audio-video" disabled></button>
+          <button class="primary-button call-button phone-button icon" id="call-audio-video" disabled>
+            <span class="tooltip-message">Email required.</span>
+          </button>
           <span class="button-divider"></span>
-          <button class="primary-button call-button audio-button icon" id="call-audio-only" disabled></button>
+          <button class="primary-button call-button audio-button icon" id="call-audio-only" disabled>
+            <span class="tooltip-message">Email required.</span>
+          </button>
         </form>
       </section>
 
