--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     
     <link rel="stylesheet" href="css/activity-spinner.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
-
-<div id="room-id-stock" hidden></div>
+<div id="test-banana"></div>
 <div id="loader">
-<div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>    
+<div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
 </div>
+
     <div id="page" style="display:none">
         <!--<div id = "sidebar">
           
@@ -35,7 +34,7 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title">Room: <span id="current-room" alt=""></span></span>
+          <span class="mdl-layout-title">Room: <span id="current-room"></span></span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
